Implement Paste+Auto buttons. Only available in "secure contexts". If unavailable, hide buttons.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 
 
     <div id="content-zone">
+
+      <div id="paste-auto-duo" class="unsupported">
+        <div id="paste-button" class="button flex-child error">Paste</div>
+        <div id="auto-button" class="button flex-child error">Auto</div>
+      </div>
+
       <textarea autofocus class="outline flex-child" id="textarea" spellcheck="false" autocapitalize="none"
         autocomplete="off"></textarea>
 
