Enable a simpler version with "?s" It just hides the title(s) (the text at the top)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
 <body>
   <div id="app">
-    <h1>YouTube ad debug info → URL</h1>
-    <h2>Just paste the copied debug info from YouTube to get the ad’s video URL!</h2>
 
+    <div id="titles">
+      <h1>YouTube ad debug info → URL</h1>
+      <h2>Just paste the copied debug info from YouTube to get the ad’s video URL!</h2>
+    </div>
 
     <div id="content-zone">
 
