Add description to HTML document, and a comment regarding the Vite icon inlining plugin.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" />
+  <link rel="icon" type="image/png" /> <!-- Inlined from Vite plugin -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Web app to facilitate obtaining a video URL from YouTube's ad debug info.">
   <link rel="stylesheet" href="./src/style.css">
   <title>YouTube ad debug info → URL</title>
 </head>
